feat(worker): #113 이미지 정제 성공 결과 이벤트 발행